@@ -115,7 +115,7 @@
             icon="icons/wesnoth_editor-icon_16.png"
             id="Wesnoth_Eclipse_Plugin.mapFileEditor"
             launcher="org.wesnoth.editors.MapFileEditor"
-            name="Map files editor">
+            name="Wesnoth map editor">
       </editor>
       <editor
             default="false"
