@@ -1,6 +1,7 @@
 Eclipse plugin changelog
 1.0.1
 	* Fixed the file associations for .map files. Now the game editor will be the default one.
+	* Optimized the building by not reloading the macros cache if no config files have been modified
 1.0.0
 	* Fixed a problem in cases when the workbench isn't started and the
 	  welcome message would have caused error starting the plugin
